fix: add prop nowrap

--- a/src/components/ui/link/Link.scss
+++ b/src/components/ui/link/Link.scss
@@ -3,6 +3,10 @@
 	white-space: nowrap;
 	border-radius: var(--s-border-small);
 
+	&.-wrap {
+		white-space: wrap;
+	}
+
 	&:hover {
 		color: var(--s-color-content-highlight);
 		&-content {
